<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.MovieDetailFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/backdrop_description"
                tools:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_movie_name"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Movie Name" />

                <TextView
                    android:id="@+id/tv_movie_overview"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    tools:text="Movie Overview" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_toggle_favorites"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/favorite"
                        app:icon="@drawable/ic_baseline_favorite_24" />

                    <TextView
                        android:id="@+id/tv_movie_rating"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/rating"></TextView>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>